manifest-exp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vinay
  namespace: default
  labels:
    name: vinay
spec:
  ports:
    - port: 443
      targetPort: 8080
  selector:
    name: vinay
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: vinay
webhooks:
  - name: vinay.phase3.com
    clientConfig:
      service:
        name: vinay
        namespace: default
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURxVENDQXBFQ0ZEeWVsWE1QQmVnT093K1VIWWRhZXVnUm1Qb0tNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1JR1EKTVFzd0NRWURWUVFHRXdKSlRqRUxNQWtHQTFVRUNBd0NTMEV4RWpBUUJnTlZCQWNNQ1VKaGJtZGhiRzl5WlRFTwpNQXdHQTFVRUNnd0ZkbWx1WVhreERqQU1CZ05WQkFzTUJYWnBibUY1TVJvd0dBWURWUVFEREJGMmFXNWhlUzVrClpXWmhkV3gwTG5OMll6RWtNQ0lHQ1NxR1NJYjNEUUVKQVJZVmRtbHVZWGt1YXpJeU16TkFaMjFoYVd3dVkyOXQKTUI0WERUSXdNRGd4TVRFNE1qVXhOMW9YRFRJd01EZ3hOREU0TWpVeE4xb3dnWkF4Q3pBSkJnTlZCQVlUQWtsTwpNUXN3Q1FZRFZ [...]
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods", "pods/log"]
        operations: ["CONNECT", "CREATE", "DELETE", "UPDATE"]
      - apiGroups: [""]
        resources: ["pods/exec"]
        apiVersions: ["v1"]
        operations: ["CONNECT", "CREATE", "DELETE", "UPDATE"]
    failurePolicy: Fail
