v1.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node
  namespace: default
  labels:
    app: node
spec:
  ports:
    - port: 443
      targetPort: 8080
  selector:
    app: node
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: node
webhooks:
  - name: node.default.svc
    matchPolicy: Equivalent
    clientConfig:
      service:
        name: node
        namespace: default
        path: "/validate"
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURwekNDQW84Q0ZIOStrR2lHbVVlK2JBbzZJSUM2ZzdRRk1teW1NQTBHQ1NxR1NJYjNEUUVCQ3dVQU1JR1AKTVFzd0NRWURWUVFHRXdKSlRqRUxNQWtHQTFVRUNBd0NTMEV4RWpBUUJnTlZCQWNNQ1VKaGJtZGhiRzl5WlRFTwpNQXdHQTFVRUNnd0ZWbWx1WVhreERqQU1CZ05WQkFzTUJWWnBibUY1TVJrd0Z3WURWUVFEREJCdWIyUmxMbVJsClptRjFiSFF1YzNaak1TUXdJZ1lKS29aSWh2Y05BUWtCRmhWMmFXNWhlUzVyTWpJek0wQm5iV0ZwYkM1amIyMHcKSGhjTk1qQXdPREUwTVRFeU9UVXhXaGNOTWpFd09ERTBNVEV5T1RVeFdqQ0JqekVMTUFrR0ExVUVCaE1DU1U0eApDekFKQmdOVkJ [...]
    rules:
      - operations: ["*"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["deployments", "pods/*"]
        scope: "Namespaced"
    failurePolicy: Fail
    timeoutSeconds: 30
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
